--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="color-scheme" content="dark">
     <meta property="og:title" content="Undangan Pernikahan Ayas & Iffa">
     <meta property="og:description" content="Undangan Pernikahan Ayas & Iffa">
-    <meta property="og:image" content="/assets/images/profile.png">
+    <meta property="og:image" content="/assets/images/gambar.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
@@ -72,7 +72,7 @@
                     <div class="text-center">
                         <h1 class="font-estetik mb-4" style="font-size: 2.2rem;">The Wedding Of</h1>
                         <div class="cropper border border-3 border-light shadow mb-4 mx-auto">
-                            <img src="/assets/images/profile.png" alt="bg">
+                            <img src="/assets/images/gambar.png" alt="bg">
                         </div>
                         <h1 class="font-estetik my-4" style="font-size: 2.5rem;">Ayas & Iffa</h1>
                         <div id="namatamu"></div>
