--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <h1 class="font-estetik my-4" style="font-size: 2.2rem;">Undangan Pernikahan</h1>
         <div class="py-4">
             <div class="cropper border border-3 border-light shadow mx-auto">
-                <img src="/assets/images/profile.png" alt="bg" onclick="modalFoto(this)">
+                <img src="/assets/images/gambar.png" alt="bg" onclick="modalFoto(this)">
             </div>
         </div>
         <h1 class="font-estetik my-4" style="font-size: 3rem;">Ayas & Iffa</h1>
@@ -133,7 +133,7 @@
             <h1 class="font-estetik text-center py-3" data-aos="fade-down" data-aos-duration="1500"
                 style="font-size: 2rem;">Galeri</h1>
 
-            <img src="/assets/images/img.jpg" width="100%" alt="">
+            <img src="/assets/images/foto.jpg" width="100%" alt="">
         </div>
     </div>
 </section>
